# qwen3-quant-gguf-from-scratch

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
book/: 00_preface.md  01_qwen3_model_inspection.md  02_text_generation_path.md  03_inference_cost_model.md  04_quantization_math_basics.md  05_weight_only_quantization.md  06_block_quantization_q8_q4.md  07_quantization_error_analysis.md  08_gguf_format_minimal.md  09_hf_to_gguf_conversion.md  10_custom_runtime_design.md  11_forward_pass_from_scratch.md  12_token_generation_and_sampling.md  13_correctness_validation.md  14_benchmarking_memory_latency_quality.md  15_modern_inference_quantization_overview.md  16_extensions_gptq_awq_fp8_kv_cache.md  README.md
book/appendices/: a_tensor_name_mapping.md  c_math_notation.md  (+4 more)
examples/: 01_quantization_math_demo.py  02_block_q8_q4_demo.py  03_write_read_toy_gguf.py  04_run_tiny_text_model.py  05_convert_qwen3_f16.py  06_convert_qwen3_q8_0.py  07_convert_qwen3_q4_0.py  08_generate_from_gguf.py
scripts/: benchmark_runtime.py  compare_quantized_gguf.py  compare_with_transformers.py  evaluate_quant_suite.py  inspect_gguf.py  inspect_hf_model.py  inspect_text_path.py  quantize_hf_to_gguf.py  run_gguf.py
tests/: conftest.py  test_attention_shapes.py  test_block_q4_0.py  test_block_q8_0.py  test_config_driven_shapes.py  test_generation.py  test_gguf_reader_writer.py  test_quant_math.py  test_qwen3_head_dim_shapes.py  test_rmsnorm.py  test_rope.py  test_runtime_device.py  test_tensor_mapping.py  test_tiny_forward.py  test_tiny_gguf_runtime.py
(+42 files in other folders)
