[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-quant-gguf-from-scratch"
version = "0.1.0"
description = "Chinese textbook and minimal runnable project for LLM inference quantization, GGUF, and custom Qwen3 runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "huggingface-hub>=0.23",
  "numpy>=1.26",
  "safetensors>=0.4",
  "socksio>=1.0.0",
  "torch>=2.2",
  "tqdm>=4.66",
  "transformers>=4.51",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
